Add spline class.
Need to check parser.

--- a/parser/Makefile
+++ b/parser/Makefile
@@ -3,7 +3,9 @@ all:
 	flex flex.l
 	g++ -c lex.yy.c -o lexer.o  -L"C:/Program Files (x86)/GnuWin32/lib" -lfl  -O3 #-Wall
 	g++ -c func.cpp -o func.o   -L"C:/Program Files (x86)/GnuWin32/lib" -lfl  -O3 #-Wall
-	g++ -c Parser.cpp -o parser.o -L . -lfunc -llexer -L"C:/Program Files (x86)/GnuWin32/lib" -lfl  -O3 #-Wall 
-	g++ -c ast.cpp -o ast.o  -O3 #-Wall 
-	ar rcs libparser.a parser.o ast.o lexer.o func.o 
+	g++ -c Parser.cpp -o parser.o -L . -lfunc -llexer -L"C:/Program Files (x86)/GnuWin32/lib" -lfl  -O3 #-Wall
+	g++ -c ast.cpp -o ast.o  -O3 -Wall
+	g++ -c value.cpp -o value.o  -O3 -Wall
+	g++ -c spline.cpp -o spline.o  -O3 -Wall
+	ar rcs libparser.a parser.o ast.o lexer.o func.o spline.o value.o
 	g++ main.cpp -L .  -lparser -L "C:/Program Files (x86)/GnuWin32/lib" -lfl  -o inter.exe  -Wall -O3
