--- a/.travis.yml
+++ b/.travis.yml
@@ -3,11 +3,16 @@ compiler: g++
 
 before_install: 
  - sudo add-apt-repository -y ppa:ubuntu-toolchain-r/test
+ - sudo add-apt-repository -y ppa:smspillaz/cmake-2.8.12
  - sudo apt-get update -y
 install: 
- - sudo apt-get install -y g++-4.8 libgl1-mesa-dev freeglut3 freeglut3-dev libglew-dev libglu1-mesa-dev libgl1-mesa-glx libgl1-mesa-dev qt4-qmake qt-sdk libusb-1.0-0-dev flex bison
+ - sudo apt-get install -y g++-4.8 libgl1-mesa-dev freeglut3 freeglut3-dev libglew-dev libglu1-mesa-dev libgl1-mesa-glx libgl1-mesa-dev cmake qt4-qmake qt-sdk libusb-1.0-0-dev flex bison
 
 script: 
+ - cd opencascade-6.8.0 
+ - cmake -G"Unix Makefiles" .
+ - make
+ - cd ..
  - qmake -o build-usb-machine/Makefile 
  - cd build-usb-machine
  - make && make sub-tests
